--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,19 @@ main:
 
   - title: "Talks"
     url: /talks/    
+  - title: "Teaching"
+    url: /teaching/    
+    
+#  - title: "Portfolio"
+#    url: /portfolio/
+        
+#  - title: "Blog Posts"
+#    url: /year-archive/
+    
+#  - title: "CV"
+#    url: /cv/
+    
+#  - title: "Guide"
+#    url: /markdown/
 
 
